Work on animated_swap and size_transition

--- a/examples/leptos-animate-test/style/main.scss
+++ b/examples/leptos-animate-test/style/main.scss
@@ -112,3 +112,11 @@ nav {
     align-content: start;
   }
 }
+
+.animated-swap-page {
+  & .content {
+    padding: 1rem 1.5rem;
+    background-color: #ffcd94;
+    display: inline-block;
+  }
+}
