restructure modules and add example for animated_show

--- a/examples/leptos-animate-test/style/main.scss
+++ b/examples/leptos-animate-test/style/main.scss
@@ -119,9 +119,19 @@ nav {
     background-color: #ffcd94;
     display: inline-block;
     overflow: hidden;
+    box-sizing: border-box;
   }
 
   & .var-c {
     height: 100px;
+  }
+}
+
+.animated-show-page {
+  & .child {
+    padding: 1rem 1.5rem;
+    background-color: #ffcd94;
+    display: inline-block;
+    box-sizing: border-box;
   }
 }
